--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,6 @@ dist
 .vscode-test
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,node
+
+# Local Netlify folder
+.netlify
