--- a/package.json
+++ b/package.json
@@ -3,8 +3,23 @@
   "packageManager": "yarn@3.2.4",
   "devDependencies": {
     "clean-css-cli": "^5.6.1",
-    "netlify-cli": "^12.13.1",
     "sass": "^1.56.0",
     "uglify-js": "^3.17.4"
-  }
+  },
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@git.sr.ht/~tsteeples/personal-website.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://todo.sr.ht/~tsteeples/personal-website"
+  },
+  "homepage": "https://git.sr.ht/~tsteeples/personal-website#readme"
 }
