--- a/package.json
+++ b/package.json
@@ -1,25 +1,50 @@
 {
-  "name": "personal_website",
-  "packageManager": "yarn@3.2.4",
-  "devDependencies": {
-    "clean-css-cli": "^5.6.1",
-    "sass": "^1.56.0",
-    "uglify-js": "^3.17.4"
-  },
-  "description": "",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "react-personal-website",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite --host",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview --host"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@git.sr.ht/~tsteeples/personal-website.git"
+  "dependencies": {
+    "@fontsource/bagnard": "^5.0.7",
+    "@fontsource/open-sans": "^5.0.20",
+    "astroturf": "^1.2.0",
+    "autoprefixer": "^10.4.16",
+    "iconoir": "^7.3.0",
+    "postcss-preset-env": "^9.3.0",
+    "prettier": "^3.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.21.2",
+    "react-svg": "^16.1.32",
+    "rehype-katex": "^7.0.0",
+    "rehype-mathjax": "^6.0.0",
+    "remark-math": "^6.0.0",
+    "ts-node": "^10.9.2",
+    "vite-plugin-favicons-inject": "^2.2.0"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://todo.sr.ht/~tsteeples/personal-website"
-  },
-  "homepage": "https://git.sr.ht/~tsteeples/personal-website#readme"
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.33",
+    "postcss-nested": "^6.0.1",
+    "stylelint": "^16.1.0",
+    "stylelint-config-standard": "^36.0.0",
+    "terser": "^5.26.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8",
+    "wrangler": "^3.22.4"
+  }
 }
