--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,25 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
-  },
+    "compilerOptions": {
+	"target": "ES2020",
+	"useDefineForClassFields": true,
+	"lib": ["ES2020", "DOM", "DOM.Iterable"],
+	"module": "ESNext",
+	"skipLibCheck": true,
+	"moduleResolution": "bundler",
+	"allowImportingTsExtensions": true,
+	"resolveJsonModule": true,
+	"isolatedModules": true,
+	"noEmit": true,
+	"jsx": "react-jsx",
+	"strict": true,
+	"noUnusedLocals": true,
+	"noUnusedParameters": true,
+	"noFallthroughCasesInSwitch": true,
+	"plugins" : [{
+	    "name": "typescript-eslint-language-service"
+	}],
+	"types" : ["vite/client"]
+    },
     "include": ["src", "types"],
-    "references": [{ "path": "./tsconfig.node.json" }],
+    "references": [{ "path": "./tsconfig.node.json" }]
 }
