--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,14 +19,19 @@ jobs:
     strategy:
       matrix:
         node-version: [20]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: echo "🖥️ Node has been setup" 
     - run: npm ci
+    - run: echo "📦 Required dependencies have been installed"
     - run: npm run build --if-present
+    - name: Build has been successful
+      if ${{ success() }}
+    - run: echo "✔️ Build successful"
