--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,5 +33,5 @@ jobs:
     - run: echo "📦 Required dependencies have been installed"
     - run: npm run build --if-present
     - name: Build has been successful
-      if ${{ success() }}
+      if: ${{ success() }}
     - run: echo "✔️ Build successful"
