Fixed lack of run step on last step

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,4 +34,4 @@ jobs:
     - run: npm run build --if-present
     - name: Build has been successful
       if: ${{ success() }}
-    - run: echo "✔️ Build successful"
+      run: echo "✔️ Build successful"
