--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,14 +21,13 @@ jobs:
         node-version: [20]
 
     steps:
-    - uses: actions/checkout@v4
-    - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: 💡 Cloning the ${{ github.repository }} repository to the runner.
+      uses: actions/checkout@v4
+    - name: 🖥️ Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: echo "🖥️ Node has been setup" 
     - run: npm ci
     - run: echo "📦 Required dependencies have been installed"
     - run: npm run build --if-present
