--- a/package.json
+++ b/package.json
@@ -6,21 +6,26 @@
     "scripts": {
         "dev": "vite --host",
         "build": "tsc && vite build",
-        "build:blog-posts": "tsx ./scripts/renderBlogPosts.ts",
         "lint:ts": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "lint:css": "stylelint ./src/**/*.css",
-        "prettier": "prettier -w ./src/**/*.{css,tsx}",
+        "prettier": "prettier -w ./src/**/*.{css,ts,tsx}",
         "preview": "vite preview --host"
     },
     "dependencies": {
         "@fontsource/bagnard": "^5.0.7",
+        "@fontsource/ibm-plex-mono": "^5.0.12",
         "@fontsource/open-sans": "^5.0.22",
+        "eslint-config-prettier": "^9.1.0",
         "iconoir": "^7.3.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-markdown": "^9.0.1",
-        "react-router-dom": "^6.21.2",
         "react-svg": "^16.1.32",
+        "rehype-highlight": "^7.0.0",
+        "rehype-katex": "^7.0.0",
+        "rehype-raw": "^7.0.0",
+        "remark-parse": "^11.0.0",
+        "remark-rehype": "^11.1.0",
+        "unified": "^11.0.4",
         "wouter": "^3.0.1"
     },
     "devDependencies": {
@@ -28,8 +33,8 @@
         "@types/node": "^20.11.5",
         "@types/react": "^18.2.48",
         "@types/react-dom": "^18.2.17",
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "@typescript-eslint/parser": "^6.21.0",
+        "@typescript-eslint/eslint-plugin": "^7.1.1",
+        "@typescript-eslint/parser": "^7.1.1",
         "@vitejs/plugin-react": "^4.2.1",
         "depcheck": "^1.4.7",
         "eslint": "^8.55.0",
@@ -37,25 +42,18 @@
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
-        "eta": "^3.2.0",
-        "katex": "^0.16.9",
         "postcss": "^8.4.33",
         "postcss-preset-env": "^9.3.0",
         "prettier": "^3.2.2",
         "rehype-format": "^5.0.0",
-        "rehype-katex": "^7.0.0",
-        "rehype-mathjax": "^6.0.0",
-        "rehype-react": "^8.0.0",
         "rehype-stringify": "^10.0.0",
         "remark-math": "^6.0.0",
         "stylelint": "^16.1.0",
         "stylelint-config-standard": "^36.0.0",
-        "to-vfile": "^8.0.0",
         "tsx": "^4.7.0",
         "typescript": "^5.2.2",
         "typescript-eslint-language-service": "^5.0.5",
         "typescript-language-server": "^4.3.1",
-        "vfile": "^6.0.1",
         "vite": "^5.0.8",
         "vite-plugin-favicons-inject": "^2.2.0"
     }
