--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
         "@fontsource/ibm-plex-mono": "^5.0.12",
         "@fontsource/open-sans": "^5.0.22",
         "eslint-config-prettier": "^9.1.0",
+        "eta": "^3.4.0",
         "iconoir": "^7.3.0",
+        "markdownlint-cli": "^0.39.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-element-to-jsx-string": "^15.0.0",
         "react-svg": "^16.1.32",
         "rehype-highlight": "^7.0.0",
         "rehype-katex": "^7.0.0",
@@ -45,10 +48,9 @@
         "postcss": "^8.4.33",
         "postcss-preset-env": "^9.3.0",
         "prettier": "^3.2.2",
-        "rehype-format": "^5.0.0",
         "rehype-stringify": "^10.0.0",
         "remark-math": "^6.0.0",
-        "stylelint": "^16.1.0",
+        "stylelint": "^16.3.1",
         "stylelint-config-standard": "^36.0.0",
         "tsx": "^4.7.0",
         "typescript": "^5.2.2",
