--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "react-personal-website",
+    "name": "thomas-steeples-personal-website",
     "private": true,
-    "version": "0.0.0",
+    "version": "3.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite --host",
@@ -9,26 +9,18 @@
         "lint:ts": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "lint:css": "stylelint ./src/**/*.css",
         "prettier": "prettier -w ./src/**/*.{css,ts,tsx}",
+        "typecheck" : "tsc",
         "preview": "vite preview --host"
     },
     "dependencies": {
         "@fontsource/bagnard": "^5.0.7",
         "@fontsource/ibm-plex-mono": "^5.0.12",
         "@fontsource/open-sans": "^5.0.22",
-        "eslint-config-prettier": "^9.1.0",
-        "eta": "^3.4.0",
         "iconoir": "^7.3.0",
-        "markdownlint-cli": "^0.39.0",
+        "plausible-tracker": "^0.3.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-element-to-jsx-string": "^15.0.0",
         "react-svg": "^16.1.32",
-        "rehype-highlight": "^7.0.0",
-        "rehype-katex": "^7.0.0",
-        "rehype-raw": "^7.0.0",
-        "remark-parse": "^11.0.0",
-        "remark-rehype": "^11.1.0",
-        "unified": "^11.0.4",
         "wouter": "^3.0.1"
     },
     "devDependencies": {
@@ -41,21 +33,29 @@
         "@vitejs/plugin-react": "^4.2.1",
         "depcheck": "^1.4.7",
         "eslint": "^8.55.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
+        "eta": "^3.4.0",
         "postcss": "^8.4.33",
         "postcss-preset-env": "^9.3.0",
         "prettier": "^3.2.2",
+        "rehype-highlight": "^7.0.0",
+        "rehype-katex": "^7.0.0",
+        "rehype-raw": "^7.0.0",
         "rehype-stringify": "^10.0.0",
         "remark-math": "^6.0.0",
+        "remark-parse": "^11.0.0",
+        "remark-rehype": "^11.1.0",
         "stylelint": "^16.3.1",
         "stylelint-config-standard": "^36.0.0",
         "tsx": "^4.7.0",
         "typescript": "^5.2.2",
         "typescript-eslint-language-service": "^5.0.5",
         "typescript-language-server": "^4.3.1",
+        "unified": "^11.0.4",
         "vite": "^5.0.8",
         "vite-plugin-favicons-inject": "^2.2.0"
     }
